--- a/.air/knotserver.toml
+++ b/.air/knotserver.toml
@@ -1,5 +1,5 @@
 [build]
-cmd = "go build -o .bin/knot ./cmd/knotserver/main.go"
+cmd = 'go build -ldflags "-X tangled.sh/tangled.sh/core/knotserver.version=$(git describe --tags --long)" -o .bin/knot ./cmd/knotserver/main.go'
 bin = ".bin/knot"
 root = "."
 
