fix repo scan path in docker-compose.yml
it is set to `/home/git/repositories` everywhere else (volume mounting, keyfetch config, etc) inside the docker directory.

without this, knotserver uses the default value "/home/git" which means it is out of sync with everywhere else.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       KNOT_SERVER_HOSTNAME: "knot.example.org"
       KNOT_SERVER_SECRET: "secret"
       KNOT_SERVER_DB_PATH: "/app/knotserver.db"
+      KNOT_REPO_SCAN_PATH: "/home/git/repositories"
     volumes:
       - "./keys:/etc/ssh/keys"
       - "./repositories:/home/git/repositories"
