docker: make docker-compose serve https and fix permissions
This fixes two issues I had when deploying the eeg.cl.cam.ac.uk knot:

1) The permissions on the volumes are currently set at build time, which means that when a fresh volume is mounted it has the wrong permissions. This fixes it to run the chmods on the volumes dynamically at entrypoint time, which lets a fresh volume work with a knotserver.
The error before was:
```
knot-1      | time=2025-05-04T13:58:36.054Z level=ERROR msg="failed to setup db" error="unable to open database file: no such file or directory"
```

2) It's a little odd for the default setup to expose 5555 and insecure http to the Internet, given that the appview will try to connect to the knot over https. This adds a standalone Caddy server as the default and removes port 5555 from being directly explosed. A more advanced user with an existing proxy can easily remove this from the compose file and hook in their own.

The only remaining footgun my users have encountered is that of port 2222 being the default. Almost all the users have forgotten to add the `port 2222` directive in their ssh_config, and the _host_ sshd rejects them. In my local setup, I've swapped the host and knot ports around so that the knot runs on 2222, but a really elegant solution would be for some sort of ssh proxy on the host ssh to redirect the `git` user to the knotserver sshd. I haven't done that yet though!

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -42,11 +42,9 @@ COPY --from=build /usr/local/bin/repoguard /home/git/repoguard
 COPY docker/rootfs/ .
 
 RUN chown root:root /usr/local/libexec/tangled-keyfetch && \
-    chmod 755 /usr/local/libexec/tangled-keyfetch && \
-    chown git:git /home/git/repoguard && \
-    chown git:git /app && chown git:git /home/git/repositories
+    chmod 755 /usr/local/libexec/tangled-keyfetch
 
 EXPOSE 22
 EXPOSE 5555
 
-ENTRYPOINT ["/init"]
+ENTRYPOINT ["/bin/sh", "-c", "chown git:git /home/git/repoguard && chown git:git /app && chown git:git /home/git/repositories && /init"]
