appview: swap out old auth service for oauth
Also does some driveby config refactoring.

--- a/.air/appview.toml
+++ b/.air/appview.toml
@@ -1,6 +1,6 @@
 [build]
 cmd = "tailwindcss -i input.css -o ./appview/pages/static/tw.css && go build -o .bin/app ./cmd/appview/main.go"
-bin = ".bin/app"
+bin = ";set -o allexport && source .env && set +o allexport; .bin/app"
 root = "."
 
 exclude_regex = [".*_templ.go"]
