--- a/.air/knotserver.toml
+++ b/.air/knotserver.toml
@@ -1,6 +1,6 @@
 [build]
-cmd = 'go build -ldflags "-X tangled.sh/tangled.sh/core/knotserver.version=$(git describe --tags --long)" -o .bin/knot ./cmd/knotserver/main.go'
-bin = ".bin/knot"
+cmd = 'go build -ldflags "-X tangled.sh/tangled.sh/core/knotserver.version=$(git describe --tags --long)" -o .bin/knot ./cmd/knot/'
+bin = ".bin/knot server"
 root = "."
 
 exclude_regex = [""]
