systemd: update ExecStart command
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.sh>

--- a/systemd/knotserver.service
+++ b/systemd/knotserver.service
@@ -4,7 +4,7 @@ After=network.target
 
 
 [Service]
-ExecStart=/usr/local/bin/knotserver
+ExecStart=/usr/local/bin/knot server
 Restart=always
 User=git
 WorkingDirectory=/home/git
