--- a/docker/rootfs/etc/ssh/sshd_config.d/tangled_sshd.conf
+++ b/docker/rootfs/etc/ssh/sshd_config.d/tangled_sshd.conf
@@ -5,5 +5,5 @@ HostKey /etc/ssh/keys/ssh_host_ed25519_key
 PasswordAuthentication no
 
 Match User git
-  AuthorizedKeysCommand /usr/local/libexec/tangled-keyfetch -git-dir /home/git/repositories
+  AuthorizedKeysCommand /usr/local/bin/knot keys -o authorized-keys
   AuthorizedKeysCommandUser nobody
