--- a/.tangled/workflows/test.yml
+++ b/.tangled/workflows/test.yml
@@ -1,6 +1,6 @@
 when:
-  - event: ["push"]
-    branch: ["master", "test-ci"]
+  - event: ["push", "pull_request"]
+    branch: ["master"]
 
 dependencies:
   nixpkgs:
