ci: nicer format check workflow
Signed-off-by: oppiliappan <me@oppi.li>

--- a/.tangled/workflows/fmt.yml
+++ b/.tangled/workflows/fmt.yml
@@ -14,5 +14,6 @@ steps:
 
   - name: "go fmt"
     command: |
-       gofmt -l .
+       unformatted=$(gofmt -l .)
+       test -z "$unformatted" || (echo "$unformatted" && exit 1)
 
