.air/appview: exclude nix/
Even though nothing in this folder would match the extensions we watch,
probably makes sense to not even waste the cycles doing so.

Signed-off-by: Winter <winter@winter.cafe>

--- a/.air/appview.toml
+++ b/.air/appview.toml
@@ -5,4 +5,4 @@ root = "."
 
 exclude_regex = [".*_templ.go"]
 include_ext = ["go", "templ", "html", "css"]
-exclude_dir = ["target", "atrium"]
+exclude_dir = ["target", "atrium", "nix"]
