ci: specify engine
Signed-off-by: oppiliappan <me@oppi.li>

--- a/.tangled/workflows/fmt.yml
+++ b/.tangled/workflows/fmt.yml
@@ -2,6 +2,8 @@ when:
   - event: ["push", "pull_request"]
     branch: ["master"]
 
+engine: nixery
+
 steps:
   - name: "Check formatting"
     command: |
