--- a/nix/gomod2nix.toml
+++ b/nix/gomod2nix.toml
@@ -13,6 +13,9 @@ schema = 3
   [mod."github.com/ProtonMail/go-crypto"]
     version = "v1.3.0"
     hash = "sha256-TUG+C4MyeWglOmiwiW2/NUVurFHXLgEPRd3X9uQ1NGI="
+  [mod."github.com/RoaringBitmap/roaring/v2"]
+    version = "v2.4.5"
+    hash = "sha256-igWY0S1PTolQkfctYcmVJioJyV1pk2V81X6o6BA1XQA="
   [mod."github.com/alecthomas/assert/v2"]
     version = "v2.11.0"
     hash = "sha256-tDJCDKZ0R4qNA7hgMKWrpDyogt1802LCJDBCExxdqaU="
@@ -38,6 +41,63 @@ schema = 3
   [mod."github.com/beorn7/perks"]
     version = "v1.0.1"
     hash = "sha256-h75GUqfwJKngCJQVE5Ao5wnO3cfKD9lSIteoLp/3xJ4="
+  [mod."github.com/bits-and-blooms/bitset"]
+    version = "v1.22.0"
+    hash = "sha256-lY1K29h4vlAmJVvwKgbTG8BTACYGjFaginCszN+ST6w="
+  [mod."github.com/blevesearch/bleve/v2"]
+    version = "v2.5.3"
+    hash = "sha256-DkpX43WMpB8+9KCibdNjyf6N/1a51xJTfGF97xdoCAQ="
+  [mod."github.com/blevesearch/bleve_index_api"]
+    version = "v1.2.8"
+    hash = "sha256-LyGDBRvK2GThgUFLZoAbDOOKP1M9Z8oy0E2M6bHZdrk="
+  [mod."github.com/blevesearch/geo"]
+    version = "v0.2.4"
+    hash = "sha256-W1OV/pvqzJC28VJomGnIU/HeBZ689+p54vWdZ1z/bxc="
+  [mod."github.com/blevesearch/go-faiss"]
+    version = "v1.0.25"
+    hash = "sha256-bcm976UX22aNIuSjBxFaYMKTltO9lbqyeG4Z3KVG3/Y="
+  [mod."github.com/blevesearch/go-porterstemmer"]
+    version = "v1.0.3"
+    hash = "sha256-hUjo6g1ehUD1awBmta0ji/xoooD2qG7O22HIeSQiRFo="
+  [mod."github.com/blevesearch/gtreap"]
+    version = "v0.1.1"
+    hash = "sha256-B4p/5RnECRfV4yOiSQDLMHb23uI7lsQDePhNK+zjbF4="
+  [mod."github.com/blevesearch/mmap-go"]
+    version = "v1.0.4"
+    hash = "sha256-8y0nMAE9goKjYhR/FFEvtbP7cvM46xneE461L1Jn2Pg="
+  [mod."github.com/blevesearch/scorch_segment_api/v2"]
+    version = "v2.3.10"
+    hash = "sha256-BcBRjVOrsYySdsdgEjS3qHFm/c58KUNJepRPUO0lFmY="
+  [mod."github.com/blevesearch/segment"]
+    version = "v0.9.1"
+    hash = "sha256-0EAT737kNxl8IJFGl2SD9mOzxolONGgpfaYEGr7JXkQ="
+  [mod."github.com/blevesearch/snowballstem"]
+    version = "v0.9.0"
+    hash = "sha256-NQsXrhXcYXn4jQcvwjwLc96SGMRcqVlrR6hYKWGk7/s="
+  [mod."github.com/blevesearch/upsidedown_store_api"]
+    version = "v1.0.2"
+    hash = "sha256-P69Mnh6YR5RI73bD6L7BYDxkVmaqPMNUrjbfSJoKWuo="
+  [mod."github.com/blevesearch/vellum"]
+    version = "v1.1.0"
+    hash = "sha256-GJ1wslEJEZhPbMiANw0W4Dgb1ZouiILbWEaIUfxZTkw="
+  [mod."github.com/blevesearch/zapx/v11"]
+    version = "v11.4.2"
+    hash = "sha256-YzRcc2GwV4VL2Bc+tXOOUL6xNi8LWS76DXEcTkFPTaQ="
+  [mod."github.com/blevesearch/zapx/v12"]
+    version = "v12.4.2"
+    hash = "sha256-yqyzkMWpyXZSF9KLjtiuOmnRUfhaZImk27mU8lsMyJY="
+  [mod."github.com/blevesearch/zapx/v13"]
+    version = "v13.4.2"
+    hash = "sha256-VSS2fI7YUkeGMBH89TB9yW5qG8MWjM6zKbl8DboHsB4="
+  [mod."github.com/blevesearch/zapx/v14"]
+    version = "v14.4.2"
+    hash = "sha256-mAWr+vK0uZWMUaJfGfchzQo4dzMdBbD3Z7F84Jn/ktg="
+  [mod."github.com/blevesearch/zapx/v15"]
+    version = "v15.4.2"
+    hash = "sha256-R8Eh3N4e8CDXiW47J8ZBnfMY1TTnX1SJPwQc4gYChi8="
+  [mod."github.com/blevesearch/zapx/v16"]
+    version = "v16.2.4"
+    hash = "sha256-Jo5k7DflV/ghszOWJTCOGVyyLMvlvSYyxRrmSIFjyEE="
   [mod."github.com/bluekeyes/go-gitdiff"]
     version = "v0.8.2"
     hash = "sha256-GWm5i1ukuBukV0GMF1rffpbOSSXZdfg6/0pABMiGzLQ="
@@ -199,6 +259,12 @@ schema = 3
   [mod."github.com/golang/mock"]
     version = "v1.6.0"
     hash = "sha256-fWdnMQisRbiRzGT3ISrUHovquzLRHWvcv1JEsJFZRno="
+  [mod."github.com/golang/protobuf"]
+    version = "v1.5.4"
+    hash = "sha256-N3+Lv9lEZjrdOWdQhFj6Y3Iap4rVLEQeI8/eFFyAMZ0="
+  [mod."github.com/golang/snappy"]
+    version = "v0.0.4"
+    hash = "sha256-Umx+5xHAQCN/Gi4HbtMhnDCSPFAXSsjVbXd8n5LhjAA="
   [mod."github.com/google/go-querystring"]
     version = "v1.1.0"
     hash = "sha256-itsKgKghuX26czU79cK6C2n+lc27jm5Dw1XbIRgwZJY="
@@ -295,6 +361,9 @@ schema = 3
   [mod."github.com/ipfs/go-metrics-interface"]
     version = "v0.3.0"
     hash = "sha256-b3tp3jxecLmJEGx2kW7MiKGlAKPEWg/LJ7hXylSC8jQ="
+  [mod."github.com/json-iterator/go"]
+    version = "v1.1.12"
+    hash = "sha256-To8A0h+lbfZ/6zM+2PpRpY3+L6725OPC66lffq6fUoM="
   [mod."github.com/kevinburke/ssh_config"]
     version = "v1.2.0"
     hash = "sha256-Ta7ZOmyX8gG5tzWbY2oES70EJPfI90U7CIJS9EAce0s="
@@ -352,12 +421,21 @@ schema = 3
   [mod."github.com/moby/term"]
     version = "v0.5.2"
     hash = "sha256-/G20jUZKx36ktmPU/nEw/gX7kRTl1Dbu7zvNBYNt4xU="
+  [mod."github.com/modern-go/concurrent"]
+    version = "v0.0.0-20180306012644-bacd9c7ef1dd"
+    hash = "sha256-OTySieAgPWR4oJnlohaFTeK1tRaVp/b0d1rYY8xKMzo="
+  [mod."github.com/modern-go/reflect2"]
+    version = "v1.0.2"
+    hash = "sha256-+W9EIW7okXIXjWEgOaMh58eLvBZ7OshW2EhaIpNLSBU="
   [mod."github.com/morikuni/aec"]
     version = "v1.0.0"
     hash = "sha256-5zYgLeGr3K+uhGKlN3xv0PO67V+2Zw+cezjzNCmAWOE="
   [mod."github.com/mr-tron/base58"]
     version = "v1.2.0"
     hash = "sha256-8FzMu3kHUbBX10pUdtGf59Ag7BNupx8ZHeUaodR1/Vk="
+  [mod."github.com/mschoch/smat"]
+    version = "v0.2.0"
+    hash = "sha256-DZvUJXjIcta3U+zxzgU3wpoGn/V4lpBY7Xme8aQUi+E="
   [mod."github.com/muesli/termenv"]
     version = "v0.16.0"
     hash = "sha256-hGo275DJlyLtcifSLpWnk8jardOksdeX9lH4lBeE3gI="
@@ -494,6 +572,9 @@ schema = 3
   [mod."gitlab.com/yawning/tuplehash"]
     version = "v0.0.0-20230713102510-df83abbf9a02"
     hash = "sha256-pehQduoaJRLchebhgvMYacVvbuNIBA++XkiqCuqdato="
+  [mod."go.etcd.io/bbolt"]
+    version = "v1.4.0"
+    hash = "sha256-nR/YGQjwz6ue99IFbgw/01Pl8PhoOjpKiwVy5sJxlps="
   [mod."go.opentelemetry.io/auto/sdk"]
     version = "v1.1.0"
     hash = "sha256-cA9qCCu8P1NSJRxgmpfkfa5rKyn9X+Y/9FSmSd5xjyo="
